# claude-memory-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: backend-architect.md  devops-architect.md  performance-engineer.md  python-expert.md  refactoring-expert.md  root-cause-analyst.md
.claude/hooks/: post_tool_use.py
agents/: business-panel-experts.md  frontend-architect.md  quality-engineer.md  requirements-analyst.md
scripts/: install.sh  post_install.py  setup_hooks.py
src/claude_memory/: __init__.py  api.py  cli.py
src/claude_memory/backends/: __init__.py  claude_tool_backend.py  file_backend.py
src/claude_memory/core/: context_loader.py  context_manager.py  file_lock.py  memory_manager.py  session_manager.py  session_workflow_manager.py  workflow_enforcer.py
src/claude_memory/data/: claude_template.md  learning-guide.md  security-engineer.md  socratic-mentor.md  system-architect.md  technical-writer.md
src/claude_memory/hooks/: post_tool_use.py  pre_tool_use.py  session_start.py  subagent_stop.py
src/claude_memory/templates/: claude_template.md  context_template.md
tests/: test_context_manager.py
