[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-memory-system"
version = "1.0.0"
description = "Portable file-based memory system for Claude Code with three-phase workflow"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Claude Memory System", email = "noreply@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "portalocker>=2.8.0",  # Cross-platform file locking
    "pydantic>=2.0",       # Data validation and serialization
    "rich>=13.0",          # CLI formatting and tables
    "typer>=0.9.0",        # CLI framework
    "watchdog>=3.0",       # File system monitoring
    "pathspec>=0.11.0",    # gitignore-style pattern matching
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
claude-memory = "claude_memory.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/claude-memory-system"
Issues = "https://github.com/yourusername/claude-memory-system/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_memory"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
